{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 103,
  "lineage": "f3bd916a-31af-7417-5c08-eba9ffe3f733",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "emtf-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/publicIPAddresses/emtf-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.174.161.155",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "emtf-ip",
            "resource_group_name": "emtf-resources",
            "sku": "Basic",
            "tags": {
              "environment": "Dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "emtf-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/networkInterfaces/emtf-nic",
            "internal_domain_name_suffix": "ipfjqhtpc3wercdixjphypwsnc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/publicIPAddresses/emtf-ip",
                "subnet_id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/virtualNetworks/emtf-network/subnets/emtf-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-8E-20-AE",
            "name": "emtf-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "emtf-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Compute/virtualMachines/emtf-vm"
          },
          "dependencies": [
            "azurerm_public_ip.emtf-ip",
            "azurerm_resource_group.emtf-rg",
            "azurerm_subnet.emtf-subnet",
            "azurerm_virtual_network.emtf-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "emtf-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/networkSecurityGroups/emtf-sg",
            "location": "westeurope",
            "name": "emtf-sg",
            "resource_group_name": "emtf-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "emtf-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "90.242.166.252/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.emtf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "emtf-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/networkSecurityGroups/emtf-sg/securityRules/emtf-dev-rule",
            "name": "emtf-dev-rule",
            "network_security_group_name": "emtf-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "emtf-resources",
            "source_address_prefix": "90.242.166.252/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.emtf-sg",
            "azurerm_resource_group.emtf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "emtf-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/publicIPAddresses/emtf-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.174.161.155",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "emtf-ip",
            "resource_group_name": "emtf-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.emtf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "emtf-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/virtualNetworks/emtf-network/subnets/emtf-subnet",
            "name": "emtf-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "emtf-resources",
            "virtual_network_name": "emtf-network"
          },
          "dependencies": [
            "azurerm_resource_group.emtf-rg",
            "azurerm_virtual_network.emtf-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "emtf-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/virtualNetworks/emtf-network/subnets/emtf-subnet",
            "network_security_group_id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/networkSecurityGroups/emtf-sg",
            "subnet_id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/virtualNetworks/emtf-network/subnets/emtf-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.emtf-sg",
            "azurerm_resource_group.emtf-rg",
            "azurerm_subnet.emtf-subnet",
            "azurerm_virtual_network.emtf-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "emtf-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1e98ca43-176f-486c-8868-ba5e7c3ed26a",
            "id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/virtualNetworks/emtf-network",
            "location": "westeurope",
            "name": "emtf-network",
            "resource_group_name": "emtf-resources",
            "subnet": [
              {
                "address_prefixes": [
                  "10.123.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/virtualNetworks/emtf-network/subnets/emtf-subnet",
                "name": "emtf-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/b5e7a8d2-4ced-4cf6-942e-9707cd426d93/resourceGroups/emtf-resources/providers/Microsoft.Network/networkSecurityGroups/emtf-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.emtf-rg"
          ]
        }
      ]
    }
  ]
}